force-app/main/default/objects/PICKLIST__c/PICKLIST__c.object-meta.xml
<CustomObject>
    <label>PICKLIST</label>
    <nameField>
        <displayFormat>P-{00}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PICKLISTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>