force-app/main/default/objects/PICKLIST__c/fields/CHECK__c.field-meta.xml
<CustomField>
    <fullName>CHECK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CHECK</label>
    <type>Checkbox</type>
</CustomField>