force-app/main/default/objects/PICKLIST__c/fields/COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>COMMENTS__c</fullName>
    <label>COMMENTS</label>
    <type>TextArea</type>
</CustomField>