force-app/main/default/objects/PICKLIST__c/fields/COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY__c</fullName>
    <label>COUNTRY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INDIA</fullName>
            </value>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>NEWZEALAND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>