force-app/main/default/objects/PICKLIST__c/fields/date_upda__c.field-meta.xml
<CustomField>
    <fullName>date_upda__c</fullName>
    <formula>MID((TEXT(DATETIMEVALUE(NOW()))),12,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>date upda</label>
    <type>Text</type>
</CustomField>