force-app/main/default/objects/PICKLIST__c/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <label>DESCRIPTION</label>
    <type>TextArea</type>
</CustomField>