force-app/main/default/objects/PICKLIST__c/fields/pick__c.field-meta.xml
<CustomField>
    <fullName>pick__c</fullName>
    <label>pick</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
                <default>true</default>
                <label>yes</label>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>