force-app/main/default/objects/PICKLIST__c/fields/STATES__c.field-meta.xml
<CustomField>
    <fullName>STATES__c</fullName>
    <label>STATE</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>COUNTRY__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ANDHRA PRADES</fullName>
            </value>
            <value>
                <fullName>TELANGANA</fullName>
            </value>
            <value>
                <fullName>KARNATAKA</fullName>
            </value>
            <value>
                <fullName>TEXAS</fullName>
            </value>
            <value>
                <fullName>CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>NEW YORK</fullName>
            </value>
            <value>
                <fullName>SYDNEY</fullName>
            </value>
            <value>
                <fullName>PERTH</fullName>
            </value>
            <value>
                <fullName>BRISBANE</fullName>
            </value>
            <value>
                <fullName>AUCKLAND</fullName>
            </value>
            <value>
                <fullName>WILLINGTON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>